# vpn_bot

./: .dockerignore  .env.example   .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  app_config.develop.toml  app_config.toml  backup.sh  docker-compose.common.yml  docker-compose.develop.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yaml  entrypoint.sh  makefile  nginx.conf  nginx_1.conf  nginx_test.conf  nginx_test1.conf  pyproject.toml  pytest.ini  redis.conf  ruff.toml
.github/ISSUE_TEMPLATE/: feature_template.md  issue_template.md
.github/workflows/: ci.yml
ai_service/: config.py
ai_service/dialogs/: __init__.py  dialogs_text.py
api/: Dockerfile  __init__.py  config.py  entrypoint.sh  main.py
api/admin/: __init__.py  dependencies.py  enums.py  router.py  services.py
api/app_error/: api_error.py  base_error.py
api/core/: config.py  database.py  dependencies.py
api/dao/: base.py
api/middleware/: __init__.py  auth_middleware.py  exceptions_middleware.py  logg_router_middleware.py  logger_context.py  session_middleware.py
api/migrations/: env.py
api/news/: dependencies.py  router.py  services.py
api/payment/: __init__.py  admin.py  dao.py  dependencies.py  model.py  router.py  schemas.py  services.py
api/referrals/: __init__.py  admin.py  dao.py  dependencies.py  models.py  router.py  schemas.py  services.py
api/scheduler/: __init__.py  dependencies.py  enums.py  mapper.py  router.py  schemas.py  services.py
api/subscription/: admin.py  dao.py  dependencies.py  enums.py  models.py  router.py  schemas.py  services.py
api/tests/: conftest.py
api/users/: __init__.py  admin.py  auth_admin.py  dao.py  dependencies.py  filters.py  models.py  router.py  schemas.py  services.py
api/users_api/: router.py  schemas.py
api/vpn/: admin.py  dao.py  dependencies.py  models.py  router.py  schemas.py  services.py
bot/: Dockerfile  __init__.py  config.py  database.py  entrypoint.sh  main.py  redis_client.py  redis_manager.py  redis_service.py
bot/admin/: __init__.py  adapter.py  enums.py  filters.py  router.py  schemas.py  services.py
bot/ai/: __init__.py  dao.py  models.py  router.py  schemas.py
bot/app_error/: __init__.py  api_error.py  base_error.py
bot/core/: __init__.py  config.py  container.py  filters.py  schemas.py
bot/dao/: __init__.py  base.py
bot/dialogs/: __init__.py  dialog_messages.yaml  dialogs_text.py
bot/help/: __init__.py  enums.py  router.py
bot/integrations/: __init__.py  api_client.py  redis_client.py
bot/middleware/: __init__.py  exception_middleware.py  user_action_middleware.py  user_context.py
bot/migrations/: env.py
bot/news/: adapter.py  filters.py  router.py  services.py
bot/payment/: __init__.py  adapter.py  dto.py  enums.py  schemas.py
bot/referrals/: __init__.py  adapter.py  admin.py  dao.py  models.py  router.py  services.py
bot/scheduler/: __init__.py  adapter.py  enums.py  schemas.py  services.py
bot/subscription/: __init__.py  adapter.py  admin.py  dao.py  enums.py  models.py  router.py  schemas.py  services.py
bot/tests/: conftest.py  test_ai_service.py
bot/users/: __init__.py  adapter.py  admin.py  auth_admin.py  dao.py  enums.py  filters.py  models.py  router.py  schemas.py  services.py  utils.py
bot/utils/: __init__.py  base_router.py  commands.py  init_default_roles.py  set_description_file.py  start_stop_bot.py
bot/vpn/: DTO.py  __init__.py  adapter.py  admin.py  dao.py  enums.py  models.py  router.py  schemas.py  services.py
shared/clients/: redis_client.py
shared/config/: app_config.py  context.py  db_config.py  logger_config.py
shared/db/: base.py
shared/enums/: admin_enum.py  subscription_enum.py
shared/schemas/: admin.py  (+2 more)
telemt-config/: telemt.toml
(+182 files in other folders)
