[tool.poetry]
name = "vpn-bot"
version = "0.1.0"
description = ""
authors = ["BoriskaGlebov <boristheblade.glebov@yandex.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
pydocstyle = "^6.3.0"
pre-commit = "^4.3.0"
ruff = "^0.12.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
skip-string-normalization = false
exclude = '''
/(
    .eggs
    .git
    .tox
    .nox
    .coverage
    .hypothesis
    .pytest_cache
    __pycache__
    build
    dist
    migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_third_party = []
known_first_party = []
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
extend-exclude = ["*/tests/*", "*.venv/*", "*/migrations/*"]
line-length = 88
select = ["E", "F", "W", "C", "D", "T"]
fix = true

[tool.pydocstyle]
convention = "google"
#exclude = ["tests/*",]  # Исключить тесты из проверки
#ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]
